--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       name="twitter:image"
       content="img/share.png"
     />
+    <link href="res/tail.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
