--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       name="twitter:image"
       content="img/share.png"
     />
-    <link href="res/tail.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="res/tailwind.min.css" rel="stylesheet">
     <style>
       body {
         font-family: "Montserrat", sans-serif;
@@ -41,6 +40,18 @@
 
       .bg-blue-bsky {
         background-color: rgb(28, 132, 220);
+      }
+
+      .bg-slate {
+        background-color: #1c273b;
+      }
+
+      .bg-slate-800 {
+        background-color: #1e293b;
+      }
+
+      .bg-slate-900 {
+        background-color: #0f172a;
       }
 
       .bg-blue-kofi {
