--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <meta
       name="description"
-      content="Easily download videos from Bluesky to your device!"
+      content="BSKYDL is a free Bluesky Video Downloader online where you can download high-quality MP4 videos from Bluesky social."
     />
     <meta
       property="og:description"
-      content="Easily download videos from Bluesky to your device!"
+      content="BSKYDL is a free Bluesky Video Downloader online where you can download high-quality MP4 videos from Bluesky social."
     />
     <meta
       name="twitter:description"
